# NEURON

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_basic_usage.py  02_contradiction_detection.py  README.md
research/: bibliography.md
research/notes/: 2026-02-01-original-contribution.md
src/neuron/: __init__.py  config.py
src/neuron/api/: __init__.py
src/neuron/core/: __init__.py  belief.py  crystal.py  fusion.py  morph.py  neuron.py  router.py
src/neuron/utils/: __init__.py
tests/: __init__.py  benchmark.py  conftest.py  test_crystal.py  test_morph.py  test_neuron.py  test_router.py
