[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuron-memory"
version = "0.3.0"
description = "Hybrid memory architecture combining exact recall with infinite-capacity fuzzy understanding for LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ertuğrul Akben", email = "i@ertugrulakben.com" }
]
keywords = [
    "llm",
    "memory",
    "transformer",
    "neural-network",
    "hypernetwork",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "redis>=4.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
all = [
    "neuron-memory[dev,api,docs]",
]

[project.urls]
Homepage = "https://github.com/ertugrulakben/neuron"
Documentation = "https://github.com/ertugrulakben/neuron#readme"
Repository = "https://github.com/ertugrulakben/neuron"
Issues = "https://github.com/ertugrulakben/neuron/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/neuron"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N806", "N812"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
